--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div id="head">
-            <div class="logo"></div>
+            <img class="logo" src="assets/image/Resident_Evil_4_Logo_Light_Outlined.png" alt="logo">
             <h1>redécouvrez un classique</h1>
         </div>
         
@@ -73,7 +73,7 @@
     </main>
     <!-- FOOTER -->
      <footer>
-            <div></div>
+            <img src="assets/image/Resident_Evil_4_Logo_Light_Outlined.png" alt="logo">
             <ul class="footbar">
                 <li><a href="">Mentions Légales</a></li>
                 <li><a href="">Politique de confidentialité</a></li>
